k8s/manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: peerprep
spec: {}
status: {}
