k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: peerprep
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: peerprep-collab-service
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000" # add Cloud Run here
spec:
  ingressClassName: nginx
  rules:
    - host: api.peerprep.svc.local
      http:
        paths:
          - path: /user-service/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: peerprep-user-service
                port:
                  number: 8000
          - path: /question-service/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: peerprep-question-service
                port:
                  number: 8000
          - path: /matching-service/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: peerprep-matching-service
                port:
                  number: 8000
          - path: /collab-service/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: peerprep-collab-service
                port:
                  number: 8000
